Update ApiSmokeTest.java